[package]
name = "task_scheduler"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
blake3 = "1.5"
digest = "0.10"
thiserror = "2.0.17"
sha3 = "0.10.8"


[dev-dependencies]
rand = "0.9.2"